[tool.poetry]
name = "ngnk-lsp"
version = "0.1.0"
description = ""
authors = ["Douglas Mennella <douglas.mennella@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
pygls = "^1.2.1"

[tool.poetry.scripts]
ngnklsp = "ngnk_lsp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
